<resources>
    <string name="app_name">Ahoy Weather Task</string>
    <string name="home">Home</string>
    <string name="temp">Temp:</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="enter_days">Enter Number of Days from 1 to 17</string>
    <string name="go">Go</string>
    <string name="dt">dt</string>
    <string name="temp_day"> Temp Day</string>
    <string name="temp_min"> Temp Min</string>
    <string name="temp_max"> Temp Max</string>
    <string name="city_name">City Name</string>
    <string name="country">Country</string>
    <string name="description">Description</string>
    <string name="add_to_favourite">Add to Favourites</string>
    <string name="name">Name</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="temp_unit">Temp Unit</string>
</resources>