<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/tv_enter_days"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_days"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_days"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        android:background="@drawable/custom_button_background"
        android:backgroundTint="@color/light_grey"
        android:padding="@dimen/_10sdp"
        android:paddingStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_days"
        app:layout_constraintStart_toStartOf="@id/tv_enter_days"
        app:layout_constraintEnd_toStartOf="@id/guideline1"
        tools:text="2"
        tools:ignore="RtlSymmetry" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_go"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14ssp"
        android:background="@drawable/custom_button_background"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="@id/et_days"
        app:layout_constraintStart_toEndOf="@id/guideline1"
        app:layout_constraintEnd_toEndOf="@id/guideline2"/>

    <TextView
        android:id="@+id/tv_temp_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="@id/tv_enter_days"
        app:layout_constraintTop_toBottomOf="@id/et_days" />

    <TextView
        android:id="@+id/tv_humidity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_7sdp"
        app:layout_constraintStart_toStartOf="@id/tv_temp_title"
        app:layout_constraintTop_toBottomOf="@id/tv_temp_title" />

    <TextView
        android:id="@+id/tv_pressure_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_7sdp"
        app:layout_constraintStart_toStartOf="@id/tv_temp_title"
        app:layout_constraintTop_toBottomOf="@id/tv_humidity" />

    <TextView
        android:id="@+id/tv_wind_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wind"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_7sdp"
        app:layout_constraintStart_toStartOf="@id/tv_temp_title"
        app:layout_constraintTop_toBottomOf="@id/tv_pressure" />

    <TextView
        android:id="@+id/tv_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/dim_grey"
        android:layout_marginStart="@dimen/_25sdp"
        app:layout_constraintStart_toEndOf="@id/tv_temp_title"
        app:layout_constraintTop_toTopOf="@id/tv_temp_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_temp_title"/>

    <TextView
        android:id="@+id/tv_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/dim_grey"
        app:layout_constraintStart_toStartOf="@id/tv_temp"
        app:layout_constraintTop_toTopOf="@id/tv_humidity_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_humidity_title" />

    <TextView
        android:id="@+id/tv_pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/dim_grey"
        app:layout_constraintStart_toStartOf="@id/tv_temp"
        app:layout_constraintTop_toTopOf="@id/tv_pressure_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_pressure_title" />

    <TextView
        android:id="@+id/tv_wind"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/dim_grey"
        app:layout_constraintStart_toStartOf="@id/tv_temp"
        app:layout_constraintTop_toTopOf="@id/tv_wind_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_wind_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_daily"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_wind_title"
        tools:listitem="@layout/feature_item"/>

</androidx.constraintlayout.widget.ConstraintLayout>