<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_city_data"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/_20sdp"
    app:layout_constraintStart_toStartOf="@id/sv_city_name"
    app:layout_constraintTop_toBottomOf="@id/sv_city_name"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_country_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_5sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_humidity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_country_title" />

    <TextView
        android:id="@+id/tv_temp_day_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temp_day"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@id/tv_country_title"
        app:layout_constraintTop_toBottomOf="@id/tv_humidity_title" />

    <TextView
        android:id="@+id/tv_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@id/tv_country_title"
        app:layout_constraintTop_toBottomOf="@id/tv_temp_day_title" />
    
    <TextView
        android:id="@+id/tv_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/dim_grey"
        android:layout_marginStart="@dimen/_5sdp"
        app:layout_constraintStart_toEndOf="@id/tv_country_title"
        app:layout_constraintTop_toTopOf="@id/tv_country_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_country_title"/>

    <TextView
        android:id="@+id/tv_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/dim_grey"
        android:layout_marginStart="@dimen/_5sdp"
        app:layout_constraintStart_toEndOf="@id/tv_humidity_title"
        app:layout_constraintTop_toTopOf="@id/tv_humidity_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_humidity_title"/>

    <TextView
        android:id="@+id/tv_temp_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/dim_grey"
        android:layout_marginStart="@dimen/_5sdp"
        app:layout_constraintStart_toEndOf="@id/tv_temp_day_title"
        app:layout_constraintTop_toTopOf="@id/tv_temp_day_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_temp_day_title" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/dim_grey"
        android:layout_marginStart="@dimen/_5sdp"
        app:layout_constraintStart_toEndOf="@id/tv_name_title"
        app:layout_constraintTop_toTopOf="@id/tv_name_title"
        app:layout_constraintBottom_toBottomOf="@id/tv_name_title" />

   

</androidx.constraintlayout.widget.ConstraintLayout>