<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20ssp"
        app:cardBackgroundColor="@color/white"
        android:elevation="@dimen/_10sdp"
        card_view:cardCornerRadius="@dimen/_20sdp"
        card_view:contentPadding="@dimen/_20sdp"
        app:cardUseCompatPadding="true"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_dt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dt"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_20sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_temp_day_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_day"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_7sdp"
                app:layout_constraintStart_toStartOf="@id/tv_dt_title"
                app:layout_constraintTop_toBottomOf="@id/tv_dt_title" />

            <TextView
                android:id="@+id/tv_temp_max_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_max"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_7sdp"
                app:layout_constraintStart_toStartOf="@id/tv_dt_title"
                app:layout_constraintTop_toBottomOf="@id/tv_temp_day" />

            <TextView
                android:id="@+id/tv_temp_min_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_min"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/_7sdp"
                app:layout_constraintStart_toStartOf="@id/tv_dt_title"
                app:layout_constraintTop_toBottomOf="@id/tv_temp_max" />

            <TextView
                android:id="@+id/tv_dt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/dim_grey"
                android:layout_marginStart="@dimen/_25sdp"
                app:layout_constraintStart_toEndOf="@id/tv_dt_title"
                app:layout_constraintTop_toTopOf="@id/tv_dt_title"
                app:layout_constraintBottom_toBottomOf="@id/tv_dt_title"/>

            <TextView
                android:id="@+id/tv_temp_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/dim_grey"
                android:layout_marginStart="@dimen/_5sdp"
                app:layout_constraintStart_toEndOf="@id/tv_temp_day_title"
                app:layout_constraintTop_toTopOf="@id/tv_temp_day_title"
                app:layout_constraintBottom_toBottomOf="@id/tv_temp_day_title" />

            <TextView
                android:id="@+id/tv_temp_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/dim_grey"
                android:layout_marginStart="@dimen/_5sdp"
                app:layout_constraintStart_toEndOf="@id/tv_temp_max_title"
                app:layout_constraintTop_toTopOf="@id/tv_temp_max_title"
                app:layout_constraintBottom_toBottomOf="@id/tv_temp_max_title" />

            <TextView
                android:id="@+id/tv_temp_min"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_14ssp"
                android:textColor="@color/dim_grey"
                android:layout_marginStart="@dimen/_5sdp"
                app:layout_constraintStart_toEndOf="@id/tv_temp_min_title"
                app:layout_constraintTop_toTopOf="@id/tv_temp_min_title"
                app:layout_constraintBottom_toBottomOf="@id/tv_temp_min_title" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>